<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/select_Realm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/select_realm_hint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/realm_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/select_Realm_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/spinner" />
        
        <TextView
            android:id="@+id/activitySettings_textview_registrationNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/realm_spinner"
            android:text="@string/registration_note"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/select_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/activitySettings_textview_registrationNote"
            android:layout_marginTop="30dp"
            android:text="@string/add_url_hint"
            android:textSize="20sp" />
       
        <EditText
            android:id="@+id/et_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/realm_spinner"
            android:layout_below="@+id/select_url_text"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionDone"
            android:inputType="textUri" />
                
        <TextView
            android:id="@+id/notificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_url"
            android:text="@string/notification"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notification_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/notificationText"
            android:text="@string/notification_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/notificationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/notificationText"/>

    </RelativeLayout>

</ScrollView>